Corrected a few mistakes in AuthTests